--- a/index.html
+++ b/index.html
@@ -33,11 +33,14 @@
         </div>
     </div>
 </div>
+<script type="text/html" id="t1">
+    question 1
+</script>
 <script type="text/html" id="q1">
-
+    question 1
 </script>
 <script type="text/html" id="t2">
-
+    text 2
 </script>
 <script type="text/html" id="t3">
 
